--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build":" mkdir -p dist && cp -r scr/* dist/"
   },
   "keywords": [],
   "author": "",
