--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-express-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon server.js",
