--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-saver": "^2.0.5",
     "fuzzysort": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^4.1.0",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
